--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-DB_HOST=localhost
-DB_USER=postgres
+# DATABASE CONFIGURATION
+DB_HOST=
+DB_USER=
 DB_PASSWORD=
 DB_NAME=
 DB_PORT=5432
+
+# CLOUDINARY CONFIGURATION
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
